--- a/new0.html
+++ b/new0.html
@@ -1,19 +1,28 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>Tutorijal 1, Zadatak 1</title>
+		<meta http-equiv="Content-Type" content="text/html ; charset=utf-8">
+		<title>Tutorijal 1, Zadatak 1</title>
 </head>
-<body>
-<center>
-<H1> Web tehnologije </H1>
-</center>
-<p> Na ovome predmetu cemo nauciti razne <i>HTML tagove&entitete</i> <br>
-Na primjer, "META" tag.
-</br></p>
-<p>"META" sluzi za defisnisanje <b>metapodataka</b> u koje spada i koristeni set znakova</p>
-<pre>
-<HTML>
-<HEAD>
- </pre>
-</body>
+	<body style="background-color:aqua">
+		<center>
+			<H1> Web tehnologije </H1>
+		</center>
+		<p> Na ovome predmetu cemo nauciti razne <i>HTML tagove&amp;entitete. </i> 
+			<br> Na primjer, "META" tag. 
+		</p>
+		<p> &lt;HTML&gt; <br> &lt;HEAD&gt;</p>
+		<center>
+			<p> &lt;meta http-equiv="Content-Type" content="text/html; charset=utf-8"&gt; </p>
+		</center>
+		<p>"META" sluzi za defisnisanje <b>metapodataka</b> u koje spada i koristeni set znakova</p>
+		<div>
+			<img align="left" src="ETF.gif" alt="neki_tekst" >
+			<p> Vise detalja na <a href="http://c2.etf.unsa.ba/course/view.php?id=119" target="_blank"> courseware 
+			stranici predmeta Web tehnologije</a> (ovaj link
+			treba zaista da otvori coursware stranicu u novom prozoru). </p>
+			<p> Slika lijevo se nalazi na sajtu www.etf.unsa.ba</p>
+		</div>
+		<p> <a href="#"> Nazad na vrh stranice</a></p>
+	</body>
 </html>
